# 02_JMLR

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
data/: DATA_MANIFEST.md  README.md
docs/: AI_REVIEW_PACKET.md  AUTODL_HPC_RUNBOOK.md  B7_R3_R7_ROUTE_DECISION.md  DIAGNOSTIC_REANALYSIS_PLAN.md  EVIDENCE_AND_AUDIT.md  EXPERIMENT_INVENTORY.md  EXPERIMENT_PLAN.md  EXTERNAL_REVIEW_BRIEF.md  EXTERNAL_REVIEW_PACKET_V2.md  EXTERNAL_REVIEW_README.md  FINAL_CLAIM_TABLE.md  HANDOFF_FOR_PAPER_WRITING.md  INTRO_REBUTTAL_PARAGRAPH.md  JMLR_METHODS_OUTLINE.md  MAIN_THEOREM_PROOF_DRAFT.md  PAPER_OUTLINE_DRAFT.md  PAPER_POSITIONING.md  PRE_PAPER_EVIDENCE_GATE.md  PROJECT_OVERVIEW.md  R5_WNUT17_FORMAL_PROTOCOL.md  README.md  RELATED_WORK_DRAFT.md  RELATED_WORK_SECTION_PLAN.md  REPRODUCIBILITY_PACKAGE_CHECKLIST.md  ROUTE_REVIEW_CHECKLIST.md  THEORY_AND_GUARDRAILS.md  THEORY_PROOF_PROSE.md
docs/audits/: FRESH_PROOF_THEORY_AUDIT.md  THEORY_AND_GUARDRAILS.md
docs/evidence/: EVIDENCE_AND_AUDIT.md  FINAL_PROOF_THEORY_AUDIT.md  PAPER_CLAIM_EVIDENCE_AUDIT.md  THEORY_AUDIT.md
docs/external_review/: CLOSEST_PRIOR_ATTACK_MEMO.md  EXTERNAL_REVIEW_PACKET_CURRENT.md  EXTERNAL_REVIEW_README.md
docs/manuscript/: CITATION_RELATED_WORK_AUDIT.md  FINAL_CLAIM_TABLE.md  JMLR_MAIN_UPGRADE_PLAN.md  JMLR_METHODS_OUTLINE.md  PAPER_DRAFT_READABILITY_AUDIT.md  PAPER_POSITIONING.md  RELATED_WORK_DRAFT.md  REPRODUCIBILITY_PACKAGE_CHECKLIST.md  (+2 more)
experiments/: README.md
paper/: README.md  main.tex  references.bib
scripts/: README.md  autodl_setup.sh  run_experiment_suite.py
(+273 files in other folders)
